--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
 
 body{
     min-height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 .btn-box , 
